#47 list configuration keys and type - GET all unique keys, types and names - swagger - new tests in configuration-test.http - with no response verification
