# swagger.yml
@@ -41,6 +41,19 @@ definitions:
         x-go-name: Name
     type: object
     x-go-package: dictionaries-service/calendar
+  Short:
+    properties:
+      key:
+        type: string
+        x-go-name: Key
+      name:
+        type: string
+        x-go-name: Name
+      type:
+        type: string
+        x-go-name: Type
+    type: object
+    x-go-package: dictionaries-service/configuration
   calendarResponse:
     properties:
       day:
@@ -74,7 +87,7 @@ definitions:
         type: string
         x-go-name: Value
     type: object
-    x-go-package: dictionaries-service/transport/http
+    x-go-package: dictionaries-service/configuration/transport/http
 host: localhost:9098
 info:
   description: |-
@@ -178,7 +191,8 @@ paths:
           $ref: '#/responses/RestError'
   /api/calendar/{type}:
     delete:
-      description: Create new calendar type
+      description: Delete calendar type - will work only if no any calendar items
+        for this type exist
       operationId: deleteCalendarType
       parameters:
       - in: path
@@ -272,9 +286,18 @@ paths:
           description: ""
         "400":
           $ref: '#/responses/RestError'
+  /api/config:
+    get:
+      description: Loads all unique config keys, name and type
+      operationId: loadAllConfigKeys
+      responses:
+        "200":
+          $ref: '#/responses/loadShortResponseWrapper'
+        "400":
+          $ref: '#/responses/RestError'
   /api/config/{key}/{day}:
     get:
-      description: Loads all calendar items for given type and date range
+      description: Loads config value for given kay and day
       operationId: loadConfig
       parameters:
       - in: path
@@ -344,6 +367,12 @@ responses:
     schema:
       items:
         $ref: '#/definitions/loadConfigurationResponse'
+      type: array
+  loadShortResponseWrapper:
+    description: ""
+    schema:
+      items:
+        $ref: '#/definitions/Short'
       type: array
 schemes:
 - http
